Bug 437223 - Can't OPT-OUT of invisible scrollbar slider
Summary: Can't OPT-OUT of invisible scrollbar slider
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: history (other bugs)
Version First Reported In: 21.04.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-17 00:00 UTC by Konstantin Kharlamov
Modified: 2021-05-25 21:28 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 21.04.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Konstantin Kharlamov 2021-05-17 00:00:50 UTC
SUMMARY

As of `21.04.0` Konsole release, the scrollbar slider became invisible. It may appear if you manage to find it and then hover a cursor over, but otherwise there's no indication.

I tried going with this new design for a while, but now I can definitely tell that the lack of slider is an inconvenience. I often used slider for:

α. In conjunction with Ctrl+k, to figure out how much text a command produced and whether I want to redirect it
β. While using "Find" feature or just scrolling with Shift+PgUp, to figure out how far am I from the bottom, and whether I am even looking at the newest output or is it just something old at the top.

With that said, I don't think it is a good default. My opinion is that it should be OPT-IN feature. Either way, as it currently stands, apparently there's no way to even OPT-OUT of this.

I am sorry if there actually is an option to OPT-OUT, but so far I have googled around and searched all over the settings, to no avail.

STEPS TO REPRODUCE
1. Execute `dmesg` to make a bunch of text in the output
2. Look at the scrollbar slider on the right

OBSERVED RESULT

There's not scrollbar slider.

EXPECTED RESULT

There is a scrollbar slider.

SOFTWARE/OS VERSIONS
KDE Plasma Version: 5.21.5
KDE Frameworks Version: 5.82.0
Qt Version: 5.15.2
Comment 1 Konstantin Kharlamov 2021-05-17 00:08:25 UTC
I should add, whether OPT-IN or not, the "invisible slider" behavior also might need modification. The slider should appear when you hover over the scrollbar, disregarding what is the current slider position. This way it is done on apps such as Telegram, various gnome settings, and it is this way because the user doesn't have any way to know where currently the slider is.

But either way, it would be unrelated to the current report. I mentioned it just to the point why it might not currently be a good default.
Comment 2 Ahmad Samir 2021-05-17 17:35:17 UTC
This is bug 393423.

(You want to leave this report about for the issue in comment#1?).
Comment 4 Konstantin Kharlamov 2021-05-17 17:51:07 UTC
(In reply to Ahmad Samir from comment #2)
> This is bug 393423.

Thank you for your comment. I have seen this bug, and it would seem odd to me if it was related, because it was first reported in 2017 year, whereas my report is a recent regression, which I can make go away by downgrading Konsole to `20.12.3`.

And in fact, I just installed latest Konsole and tested out with Breeze theme, and I confirm that the problem is present.

For reference, here's the screenshot with Breeze theme: https://i.imgur.com/kA5RfKG.png you can see on the right there's no scrollbar slider.

Do you see a different behavior?
Comment 5 Ahmad Samir 2021-05-17 17:55:02 UTC
I see, I thought you were using the Oxygen style.

So this report is actually about Breeze... sorry for the noise :)
Comment 6 Konstantin Kharlamov 2021-05-17 17:56:14 UTC
(In reply to Ahmad Samir from comment #5)
> I see, I thought you were using the Oxygen style.
> 
> So this report is actually about Breeze... sorry for the noise :)

No worries!
Comment 7 Konstantin Kharlamov 2021-05-17 20:52:45 UTC
Oops, apparently I was wrong thinking it's a new feature, it seems the invisible slider is an actual bug.

I did a bisection, and the offending commit didn't mean to make any functional changes, its description says it simply moves the code around. The commit is:

    commit 72d604c6cc96e0c2439244382ac07c6601970835
    Author: Gustavo Carneiro <gcarneiroa@hotmail.com>
    Date:   Tue Dec 8 09:50:54 2020 -0300

        Move terminal color methods to a new class TerminalColor.

CCing the author
Comment 8 Konstantin Kharlamov 2021-05-17 20:57:02 UTC
So, FWIW, even though it is an "occasional feature" that wasn't meant to be made, but I kinda like the idea. I was thinking more about it, and I think it could be made to work in less intrusive way that it is now. I think it might be good to copy behavior of Telegram: it also has invisible scroll slider, but it makes it appear whenever scroll moves. And, I think on "Find" feature it also may be useful to make it appear.

But anyway, we need to decide what to with this at the present moment.
Comment 9 Bug Janitor Service 2021-05-22 18:07:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/394
Comment 10 Bug Janitor Service 2021-05-25 11:22:51 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/398
Comment 11 ninjalj 2021-05-25 11:58:49 UTC
Git commit 1cda384ec34e70ce052f8d177a8afcb665964663 by Luis Javier Merino Morán.
Committed on 25/05/2021 at 11:14.
Pushed by ahmadsamir into branch 'master'.

Fix alpha channel of scrollbar colors

Commit 72d604c6cc96e0c2439244382ac07c6601970835 refactored some code
from TerminalDisplay into a new TerminalColor class, and in the process
lost an F on setAlphaF().

M  +1    -1    src/terminalDisplay/TerminalColor.cpp

https://invent.kde.org/utilities/konsole/commit/1cda384ec34e70ce052f8d177a8afcb665964663
Comment 12 Ahmad Samir 2021-05-25 12:07:58 UTC
Git commit 585f9a561a07ec1cf5c20af37229667a3009362a by Ahmad Samir, on behalf of Luis Javier Merino Morán.
Committed on 25/05/2021 at 12:07.
Pushed by ahmadsamir into branch 'release/21.04'.

Fix alpha channel of scrollbar colors

Commit 72d604c6cc96e0c2439244382ac07c6601970835 refactored some code
from TerminalDisplay into a new TerminalColor class, and in the process
lost an F on setAlphaF().
(cherry picked from commit 1cda384ec34e70ce052f8d177a8afcb665964663)

M  +1    -1    src/terminalDisplay/TerminalColor.cpp

https://invent.kde.org/utilities/konsole/commit/585f9a561a07ec1cf5c20af37229667a3009362a
Comment 13 Ahmad Samir 2021-05-25 12:14:03 UTC
Posted to distributions@kde.org ML https://mail.kde.org/pipermail/distributions/2021-May/001011.html so that packagers pick it up.
Comment 14 Nate Graham 2021-05-25 17:45:09 UTC
This seems to fix Bug 393423 for me too with Oxygen and MS Windows widget styles. FUsion still seems to be affected. Can anyone confirm?
Comment 15 ninjalj 2021-05-25 21:12:49 UTC
Bug 393423 is unrelated to this bug. It's about the scrollbar using a specific Konsole colorscheme, no longer using the same colorscheme that others apps use, and there being no option for it. 

bug 393423#c17 really belongs to this bug, but anything before Dec 8 09:50:54 2020, which is when this bug was introduced, belongs to 393423.

As to Fusion, when I took a look for https://invent.kde.org/utilities/konsole/-/merge_requests/394 , I saw no visual differences caused by this bug for Breeze or Fusion.
Comment 16 Ahmad Samir 2021-05-25 21:28:08 UTC
Indeed, bug 393423 pre-dates this one; this bug got blamed for all scrollbar colours stuff wrongly.