Fix alpha channel of scrollbar colors

Commit 72d604c6cc96e0c2439244382ac07c6601970835 refactored some code
from TerminalDisplay into a new TerminalColor class, and in the process
lost an F on setAlphaF().

BUG: 437223